--- a/code_alongs/L11_OOP_basics.ipynb
+++ b/code_alongs/L11_OOP_basics.ipynb
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,8 +503,6 @@
     "\n",
     "    def __init__(self, name, price, brand, expiry, stock):\n",
     "        \n",
-    "        raise TypeError\n",
-    "\n",
     "        self.name = name\n",
     "        self.price = price\n",
     "        self.brand = brand\n",
@@ -544,22 +542,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 290,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Leyla\\Desktop\\Quantum State\\IT högskolan\\Courses\\Python\\code_alongs\\L11_OOP_basics.ipynb Cell 43\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y222sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m demonstration \u001b[39m=\u001b[39m Wares(\u001b[39m'\u001b[39m\u001b[39mbanana\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mChichquita\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39m2023-10-18\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m200\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\Leyla\\Desktop\\Quantum State\\IT högskolan\\Courses\\Python\\code_alongs\\L11_OOP_basics.ipynb Cell 43\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y222sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, name, price, brand, expiry, stock):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y222sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y222sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m=\u001b[39m name\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y222sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprice \u001b[39m=\u001b[39m price\n",
-      "\u001b[1;31mTypeError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "demonstration = Wares('banana', 5, 'Chichquita', '2023-10-18', 200)"
    ]
@@ -1134,18 +1119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "",
+     "evalue": "Din input är inte av typen int eller float.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Leyla\\Desktop\\Quantum State\\IT högskolan\\Courses\\Python\\code_alongs\\L11_OOP_basics.ipynb Cell 82\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y215sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m min_nya_variabel \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m33\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y215sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(min_nya_variabel, (\u001b[39mint\u001b[39m, \u001b[39mfloat\u001b[39m)):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y215sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: "
+      "\u001b[1;32mc:\\Users\\Leyla\\Desktop\\Quantum State\\IT högskolan\\Courses\\Python\\code_alongs\\L11_OOP_basics.ipynb Cell 82\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y215sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m min_nya_variabel \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m33\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y215sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(min_nya_variabel, (\u001b[39mint\u001b[39m, \u001b[39mfloat\u001b[39m)):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y215sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mDin input är inte av typen int eller float.\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Din input är inte av typen int eller float."
      ]
     }
    ],
@@ -1154,7 +1139,134 @@
     "\n",
     "if not isinstance(min_nya_variabel, (int, float)):\n",
     "\n",
-    "    raise TypeError"
+    "    raise TypeError('Din input är inte av typen int eller float.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Uppgift**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**a)** I klassen Wares ni byggde tidigare (eller den jag gjorde ovan) ska ni nu lägga in type hints på alla metoder. Dvs, indikera datatyp för alla argument samt det du returnerar (om det returnas något)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**b)** Kontroller så att argumenten användaren matar in när den skapar instansen är av korrekt datatyp. Annars, raise TypeError\n",
+    "\n",
+    "**c)** kontrollera även att alla argument som användaren eventuellt behöver ange i metoder (förutom __init__) också är av rätt datatyp, returnera TypeError annars"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Svar**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Wares:\n",
+    "\n",
+    "    '''This class describes and handles wares that are sold in our store'''\n",
+    "\n",
+    "    def __init__(self, name: str, price: float, brand: str, expiry: str, stock: int):\n",
+    "        \n",
+    "        if not isinstance(name, str):\n",
+    "            raise TypeError('Namnet på varan måste vara en sträng')\n",
+    "        \n",
+    "        if not isinstance(price, (float, int)):\n",
+    "            raise TypeError('Ditt pris måste vara antingen ett heltal eller ett flyttal')\n",
+    "        \n",
+    "        if not isinstance(brand, str):\n",
+    "            raise TypeError('Varumärket måste anges som en sträng')\n",
+    "        \n",
+    "        if not isinstance(expiry, str):\n",
+    "            raise TypeError('Bäst-före-datum måste anges som en sträng')\n",
+    "        \n",
+    "        if not isinstance(stock, int):\n",
+    "            raise TypeError('Lagersaldot anges i heltal.')\n",
+    "        \n",
+    "\n",
+    "\n",
+    "        self.name = name\n",
+    "        self.price = price\n",
+    "        self.brand = brand\n",
+    "        self.expiry = expiry\n",
+    "        self.__stock = stock\n",
+    "\n",
+    "    # applies discount to price corresponding to the argument percentage (in decimal)\n",
+    "    def discount(self, percentage: float):\n",
+    "\n",
+    "        self.price *= (1-percentage)\n",
+    "\n",
+    "    # subtracts the amount just bought from the current value of the stock\n",
+    "    # if the customer tries to buy more than available, push back against the customer instead\n",
+    "    def purchase(self, amount: int):\n",
+    "    \n",
+    "        if amount <= self.__stock:\n",
+    "            self.__stock -= amount    \n",
+    "        else:\n",
+    "            print(f\"Sorry, but we're unable to proceed with your purchase of {amount} {self.name}'s - we have {self.__stock} available.\")\n",
+    "\n",
+    "    @property\n",
+    "    def stock(self) -> int:\n",
+    "        return self.__stock\n",
+    "    \n",
+    "    def change_stock(self, value: int):\n",
+    "        self.__stock = value\n",
+    "    \n",
+    "    def __repr__(self) -> str:\n",
+    "        return f'''Information:\n",
+    "                   name         : {self.name}\n",
+    "                   price        : {self.price}\n",
+    "                   brand        : {self.brand}\n",
+    "                   expiry       : {self.expiry}\n",
+    "                   stock        : {self.__stock}\n",
+    "                '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "banana = Wares('banana', 5, 'Chichquita', '2023-10-18', 200)\n",
+    "apple = Wares('apple', 4, 'Granny Smith', '2023-10-24', 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'Wares' and 'Wares'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Leyla\\Desktop\\Quantum State\\IT högskolan\\Courses\\Python\\code_alongs\\L11_OOP_basics.ipynb Cell 89\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Leyla/Desktop/Quantum%20State/IT%20h%C3%B6gskolan/Courses/Python/code_alongs/L11_OOP_basics.ipynb#Y244sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m banana \u001b[39m/\u001b[39m apple\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'Wares' and 'Wares'"
+     ]
+    }
+   ],
+   "source": [
+    "banana / apple"
    ]
   },
   {
