--- a/lectures/L12_polymorphism.ipynb
+++ b/lectures/L12_polymorphism.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/aleylani/Python/blob/main/Lecture_notes/Lec12_polymorphism.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/aleylani/Python/blob/main/lectures/Lec12_polymorphism.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -78,18 +78,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Gz75ynLTWJJ4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Blupp blupp\n",
+            "Errh..., I actually dont know what the fox sounds like\n"
+          ]
+        }
+      ],
       "source": [
         "class Fish:\n",
         "    def __init__(self, name):\n",
         "        self.name = name\n",
-        "\n",
-        "    def __str__(self):\n",
-        "        return f\"I am a fish, my name is {self.name}\"\n",
         "\n",
         "    def speak(self):\n",
         "        print(\"Blupp blupp\")\n",
@@ -99,18 +105,15 @@
         "    def __init__(self, name):\n",
         "        self.name = name\n",
         "\n",
-        "    def __str__(self):\n",
-        "        return f\"I am a fox, my name is {self.name}, no one knows how I sound\"\n",
         "\n",
         "    def speak(self):\n",
-        "        return NotImplemented # as we don't know the sound of the fox\n",
+        "        print('Errh..., I actually dont know what the fox sounds like')\n",
         "\n",
         "\n",
         "animals = (Fish(\"Pelle\"), Fox(\"Ylvis\"))\n",
         "\n",
         "# although animals have different types, you can iterate through it and call same method as they are bound to different objects\n",
         "for animal in animals:\n",
-        "    print(animal)\n",
         "    animal.speak()\n"
       ]
     },
@@ -321,7 +324,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.11.4"
     },
     "vscode": {
       "interpreter": {
