--- a/exercises/12_OOP_inheritance_polymorphism.ipynb
+++ b/exercises/12_OOP_inheritance_polymorphism.ipynb
@@ -92,13 +92,13 @@
         "\n",
         "```python\n",
         "\n",
-        "simplify(self, value = None) # simplifies to most simple form unless value is given\n",
-        "\n",
-        "__str__(self) # represent the fraction in a neat way for printing\n",
+        "__repr__(self) # represent the fraction in an unambigious way when printing\n",
         "\n",
         "mixed(self) # represent the fraction in mixed terms\n",
         "\n",
         "__eq__(self, other) # checks equality by overloading ==\n",
+        "\n",
+        "simplify(self) # simplifies the fraction to its most simple form (with all common divisors removed) \n",
         "\n",
         "```\n",
         "\n",
@@ -118,6 +118,11 @@
         "\n",
         "</details>\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
