--- a/exercises/12_OOP_inheritance_polymorphism.ipynb
+++ b/exercises/12_OOP_inheritance_polymorphism.ipynb
@@ -42,41 +42,48 @@
       "source": [
         "## 1. Video (*)\n",
         "\n",
-        "Create classes following this UML:\n",
+        "Create a Movie class with the following functionality:\n",
         "\n",
-        "<img src=\"../assets/UML_video_polymorphism.png\" width=\"700\"/>\n",
+        "An info() method that .\n",
         "\n",
-        "Note that the method info() should be different in the different classes where it should be implemented.\n",
+        "It should be able to accept 4 arguments\n",
+        "\n",
+        "    name, genre, IMDB-rating, duration (in minutes)\n",
         "\n",
         "Use the following code to test your program.\n",
         "\n",
         "```python\n",
-        "pokemon = TV_serie(\"Pokemon\", \"Cartoon\", 4.5, 550)\n",
-        "titanic = Movie(\"Titanic\", \"Romance\", 4.7, 194)\n",
-        "code = Documentary(\"The Code\", \"Math\", 4)\n",
+        "pokemon = Movie(\"Pokemon\", \"Cartoon\", 4.5, 94)\n",
+        "titanic = Movie(\"Titanic\", \"Romance\", 4.7, 120)\n",
+        "code = Movie(\"The Code\", \"Math\", 4, 82)\n",
         "\n",
-        "for video in tuple((pokemon, titanic, code)):\n",
-        "    print(video.info())\n",
         "```\n",
         "\n",
-        "An example output could be:\n",
-        "```\n",
-        "TV series with title Pokemon, genre Cartoon, rating 4.5 and episodes 550\n",
+        "Now, create a method called info() that accomplishes the following\n",
         "\n",
-        "Movie with title Titanic, genre Romance, rating 4.7, duration 194 minutes\n",
+        "    for video in tuple((pokemon, titanic, code)):\n",
+        "        print(video.info())\n",
+        "        \n",
+        "    TV series with title Pokemon, genre Cartoon, rating 4.5 and duration \n",
         "\n",
-        "Video with title The Code, genre Math and rating 4\n",
-        "```\n",
+        "    TV series with title Titanic, genre Romance, rating 4.7, duration 194 minutes\n",
         "\n",
-        "(*)\n",
+        "    TV series with title The Code, genre Math and rating 4, and duration 500 minutes\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
-        "<details>\n",
+        "Additionally overload the + operator so that we can see how long any given combination of movies is. For example:\n",
         "\n",
-        "<summary>Hint</summary>\n",
+        "    pokemon + titanic\n",
         "\n",
-        "Use ```__super__()``` in each subclass to call the \\_\\_init\\_\\_() in parent class. Add additional parameters in the \\_\\_init\\_\\_() of each subclass when needed. Keep error handling and validation in parent class and let the subclass inherit them in order to avoid repeating validation code.\n",
+        "should yield\n",
         "\n",
-        "</details>"
+        "    The movies Pokemon and Titanic, together, have a total playtime of 94 + 120 = 214 minutes."
       ]
     },
     {
@@ -145,7 +152,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.11.4"
     },
     "vscode": {
       "interpreter": {
