--- a/exercises/12_OOP_inheritance_polymorphism.ipynb
+++ b/exercises/12_OOP_inheritance_polymorphism.ipynb
@@ -40,7 +40,7 @@
         "id": "0LmdhIcCRamT"
       },
       "source": [
-        "## 1. Video (*)\n",
+        "## 1. Movie (*)\n",
         "\n",
         "Create a Movie class with the following functionality:\n",
         "\n",
