--- a/exercises/12_OOP_inheritance_polymorphism.ipynb
+++ b/exercises/12_OOP_inheritance_polymorphism.ipynb
@@ -61,14 +61,14 @@
         "\n",
         "Now, create a method called info() that accomplishes the following\n",
         "\n",
-        "    for video in tuple((pokemon, titanic, code)):\n",
-        "        print(video.info())\n",
+        "    for movie in tuple((pokemon, titanic, code)):\n",
+        "        print(movie.info())\n",
         "        \n",
-        "    TV series with title Pokemon, genre Cartoon, rating 4.5 and duration \n",
+        "    Movie with title Pokemon, genre Cartoon, rating 4.5, duration 94 minutes\n",
         "\n",
-        "    TV series with title Titanic, genre Romance, rating 4.7, duration 194 minutes\n",
+        "    Movie with title Titanic, genre Romance, rating 4.7, duration 120 minutes\n",
         "\n",
-        "    TV series with title The Code, genre Math and rating 4, and duration 500 minutes\n",
+        "    Movie with title The Code, genre Math and rating 4, duration 82 minutes\n",
         "```"
       ]
     },
