--- a/code_alongs/L12_OOP_inheritance_polymorphism.ipynb
+++ b/code_alongs/L12_OOP_inheritance_polymorphism.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
     "        self.expiry = expiry\n",
     "        self.stock = stock\n",
     "\n",
-    "    def __add__(self, other):\n",
+    "    def __add__(self, *others):\n",
     "\n",
     "        if isinstance(other, str):\n",
     "\n",
@@ -215,8 +215,9 @@
     "        else:\n",
     "\n",
     "            total_price = f'{self.price} + {other.price}'\n",
-    "\n",
+    "        \n",
     "        return total_price\n",
+    "\n",
     "\n",
     "    def __mul__(self, other):\n",
     "\n",
@@ -228,52 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "banan = Wares('banana', 5, 'Chiquita', '2024', 100)\n",
     "äpple = Wares('apple', 6, 'Granny Smith', '2025', 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'5 + 6'"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "banan + äpple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'6 + 5'"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "äpple + banan"
    ]
   },
   {
@@ -327,7 +288,7 @@
     "|    +     |   \\_\\_add\\_\\_(self,other)    |\n",
     "|    -     |   \\_\\_sub\\_\\_(self,other)    |\n",
     "|    \\*    |   \\_\\_mul\\_\\_(self,other)    |\n",
-    "|    /     |   \\_\\_div\\_\\_(self,other)    |\n",
+    "|    /     |   \\_\\_truediv\\_\\_(self,other)    |\n",
     "|    //    | \\_\\_floordiv\\_\\_(self,other) |\n",
     "|    %     |   \\_\\_mod\\_\\_(self,other)    |\n",
     "|   \\*\\*   |   \\_\\_pow\\_\\_(self,other)    |\n",
