--- a/code_alongs/L13_inheritence.ipynb
+++ b/code_alongs/L13_inheritence.ipynb
@@ -167,10 +167,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Uppgift:\n",
+    "\n",
+    "- Skapa en huvudklass som heter Flygplan\n",
+    "\n",
+    "        Låt den ha minst 3 attribut samt 3 metoder (utöver init)\n",
+    "\n",
+    "- Skapa sedan två separata underklasser som ärver från Flygplan\n",
+    "\n",
+    "        Låt den en heta Stridsflygplan & den andra Passagerarflygplan\n",
+    "\n",
+    "Ni bestämmer själva hur ni ska konfigurera underklasserna men ni ska MINST uttöka deras funktionaliter relativt huvudklassen\n",
+    "\n",
+    "        Tips: metoderna och unika attributen som underklasserna har kanske borde vara specifika för just strids- samt passagerarflygplan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
