--- a/code_alongs/L13_inheritence.ipynb
+++ b/code_alongs/L13_inheritence.ipynb
@@ -85,6 +85,7 @@
     "\n",
     "    def __init__(self, brand: str, mode: str, model_year: str, passenger_capacity: int):\n",
     "        \n",
+    "        # med super blir self implicit, dvs du ska inte ange den\n",
     "        super().__init__(brand, mode, model_year)\n",
     "\n",
     "        self.capacity = passenger_capacity\n",
@@ -189,6 +190,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frivilliga_kandidater = ['filip', 'mateusz'] "
+   ]
   }
  ],
  "metadata": {
