--- a/code_alongs/L13_inheritence.ipynb
+++ b/code_alongs/L13_inheritence.ipynb
@@ -193,11 +193,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grattis mateusz, du är först ut!\n"
+     ]
+    }
+   ],
    "source": [
-    "frivilliga_kandidater = ['filip', 'mateusz'] "
+    "import random\n",
+    "\n",
+    "frivilliga_kandidater = ['filip', 'mateusz']\n",
+    "\n",
+    "utvald = frivilliga_kandidater[random.randint(0,1)]\n",
+    "\n",
+    "print(f'Grattis {utvald}, du är först ut!')"
    ]
   }
  ],
